<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/pager_item" />

    <LinearLayout
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pager">

        <View
            android:id="@+id/dot1"
            android:layout_width="60dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:id="@+id/dot2"
            android:layout_width="60dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@drawable/dot_inactive" />

        <View
            android:id="@+id/dot3"
            android:layout_width="60dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@drawable/dot_inactive" />

    </LinearLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:gravity="center"
        android:layout_margin="16dp"
        android:text="@string/welcome_to_hadirai"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicator"
        tools:alpha="100"
        tools:fontFamily="@font/poppins_bold" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="@color/green_dark"
        android:theme="@style/Theme.HadirAI.ButtonOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:alpha="100" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:alpha="100" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>